# private-balance-attestation

./: .gitignore  ADR.md  CONTRIBUTING.md  Cargo.toml  FURPS.md  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  SECURITY.md  SHIP.md  SPEC.md  STATUS.md  package-lock.json  package.json  scaffold.toml  spel.toml  vercel.json
.github/workflows/: ci.yml
attestation_cli/: Cargo.toml
attestation_cli/src/: io.rs  main.rs  sequencer.rs
attestation_core/: Cargo.toml
attestation_core/src/: commitment.rs  context.rs  instruction.rs  journal.rs  lib.rs  merkle.rs  pda.rs  witness.rs
attestation_host/: Cargo.toml
attestation_host/src/: lib.rs
attestation_program/: Cargo.toml
attestation_program/src/: challenge.rs  dispatch.rs  errors.rs  handlers.rs  lib.rs  state.rs
attestation_program/src/handlers/: admin.rs  gate_action.rs  initialize.rs
attestation_verifier/: Cargo.toml
attestation_verifier/src/: lib.rs
basecamp-app/: README.md  index.html  manifest.json  vercel.json
basecamp-app/src/: app.js  style.css
docs/: architecture.md  benchmarks.md  circuit.md  commitment-format.md  integrations.md  lez-program-design.md  onchain-program.md  presenter-binding.md
e2e_tests/: Cargo.toml
e2e_tests/src/: lib.rs
e2e_tests/tests/: off_chain_chat_gate.rs  on_chain_gate.rs
examples/chat-gate/: README.md  package.json
examples/chat-gate/src/: demo.ts  mock-transport.ts
examples/fee-tier-gate/: README.md  package.json  tsconfig.json
examples/fee-tier-gate/src/: cli.ts  lib.ts
examples/governance-gate/: README.md  package.json
examples/governance-gate/program/: Cargo.toml
examples/governance-gate/program/src/: lib.rs
examples/governance-gate/scripts/: cast-vote.sh
idl-gen/: Cargo.toml
idl-gen/src/: main.rs
methods/: Cargo.toml  build.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
outreach/: external-integrator-post.md
scripts/: benchmark.sh  demo.sh  setup-devnet.sh
solutions/: LP-0005.md
tests/e2e/: README.md
ts/: package.json  tsconfig.esm.json  tsconfig.json
ts/src/: context.ts  errors.ts  index.ts  messaging.ts  prove.ts  types.ts  verify.ts
