[workspace]
resolver = "2"
members = [
    "attestation_core",
    "attestation_program",
    "attestation_host",
    "attestation_verifier",
    "attestation_cli",
    "methods",
    "methods/guest",
    "idl-gen",
    "e2e_tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/warfield2016/private-balance-attestation"
rust-version = "1.90"

[workspace.dependencies]
# LEZ runtime — pinned to a tag for stability. Matches lez-multisig.
nssa_core = { git = "https://github.com/logos-blockchain/logos-execution-zone.git", tag = "v0.2.0-rc3" }

# SPEL framework — Anchor-style macros that emit a LEZ program.
spel-framework = { git = "https://github.com/logos-co/spel.git", tag = "v0.3.0" }

# RISC0 — pinned exact for receipt determinism (matches lez-multisig).
risc0-zkvm = { version = "=3.0.5", default-features = false }
risc0-build = "=3.0.5"

# Crypto
sha2 = { version = "0.10", default-features = false }
ed25519-dalek = { version = "2.1", default-features = false, features = ["alloc"] }
rand_core = { version = "0.6", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }

# Serialization
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0"
bincode = "1.3"
borsh = { version = "1.5", default-features = false, features = ["derive"] }

# Errors / utilities
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "net", "io-util"] }

# Local crate paths
attestation_core = { path = "attestation_core", default-features = false }
attestation_host = { path = "attestation_host" }
attestation_verifier = { path = "attestation_verifier" }
attestation_program = { path = "attestation_program" }

[profile.release]
codegen-units = 1
lto = true
opt-level = 3

[profile.dev]
opt-level = 1
